--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
+    "hamburger-react": "^2.5.0",
     "intersection-observer": "^0.12.2",
     "next": "^13.2.4",
     "react": "18.2.0",
